# obstacle_detection

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/obstacle_detection/lib/obstacle_detection/: obstacle_detection_node
install/obstacle_detection/share/obstacle_detection/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/obstacle_detection/share/obstacle_detection/cmake/: obstacle_detectionConfig-version.cmake  obstacle_detectionConfig.cmake
install/obstacle_detection/share/obstacle_detection/environment/: ament_prefix_path.dsv  path.dsv
install/obstacle_msgs/share/obstacle_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/obstacle_msgs/share/obstacle_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  (+21 more)
log/: latest_build
obstacle_detection/: CMakeLists.txt  package.xml
obstacle_detection/include/obstacle_detection/: .obstacle_detection.hpp.swp  obstacle_detection.hpp
obstacle_detection/include/quaternion/: quaternion.hpp
obstacle_detection/launch/: obstacle_detection.launch.py
obstacle_detection/src/: .obstacle_detection.cpp.swp  main.cpp  obstacle_detection.cpp
obstacle_detection/src/log/: latest_build
obstacle_detection/src/quaternion/: quaternion.cpp
obstacle_msgs/: CMakeLists.txt  package.xml
obstacle_msgs/msg/: Status.msg
test/: .kec_area_test.sh.swp  .obs_node_pub.sh.swp  kec_area_test.sh  obs_node_pub.sh
(+55 files in other folders)
